Allow the user to specify the max number of notifications that are visible. Set the width of the notification display area. Fix missing arguments into showNotificationsCount() in toast_notifications.js.

--- a/crits/core/static/css/core.css
+++ b/crits/core/static/css/core.css
@@ -8,6 +8,7 @@
     padding-bottom: 10px;
     padding-right: 10px;
     text-align: center;
+    width: 350px;
 }
 
 #close_notifications, #notifications_count {
